--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -1,198 +1,208 @@
+html {
+  box-sizing: border-box; }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
+
 body {
+  margin: 0; }
+
+a {
+  background-color: transparent; }
+
+img {
+  max-width: 100%;
+  margin: 0 0 1rem;
+  border: 0;
+  border-radius: 5px; }
+
+button,
+input,
+select,
+textarea {
+  font: inherit;
+  margin: 0; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  margin-bottom: 1.75rem; }
+
+td,
+th {
+  padding: 0.25rem 0.5rem; }
+
+tbody tr:nth-child(odd) td,
+tbody tr:nth-child(odd) th {
+  background-color: #f9f9f9; }
+
+body {
+  color: #333;
   font-family: Merriweather, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Serif;
   font-size: 100%;
-  line-height: 1.65;
-  letter-spacing: 0.01rem;
-}
-a {
-  color: #0074d9;
-  text-decoration: none;
-}
-ahover,
-afocus {
-  text-decoration: underline;
-}
+  line-height: 1.85;
+  letter-spacing: 0.01rem; }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin-bottom: 0.5rem;
   font-weight: bold;
   line-height: 1.25;
-  color: #333;
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
-}
+  margin-bottom: 0.75rem; }
+
 h1 {
-  font-size: 2rem;
-}
+  font-size: 1.8rem; }
+
 h2 {
-  font-size: 1.5rem;
-}
+  font-size: 1.5rem; }
+
 h3 {
-  font-size: 1.25rem;
-}
+  font-size: 1.25rem; }
+
 h4,
 h5,
 h6 {
-  font-size: 1rem;
-}
+  font-size: 1rem; }
+
 p,
-ul,
+dl,
 ol,
-dl {
+ul {
   margin-top: 0;
-  margin-bottom: 1rem;
-}
-strong {
-  color: #303030;
-}
-dt {
-  font-weight: bold;
-}
-dd {
-  margin-bottom: 0.5rem;
-}
-hr {
-  border: 0;
-  border-top: 1px solid rgba(0,0,0,0.2);
-  display: block;
-  width: 150px;
-  margin: 1.5rem 0;
-}
-abbr {
-  font-size: 85%;
-  font-weight: bold;
-  color: #555;
-  text-transform: uppercase;
-}
-abbr[title] {
-  cursor: help;
-  border-bottom: 1px dotted #e5e5e5;
-}
+  margin-bottom: 1.75rem; }
+
+a {
+  color: #2980b9;
+  text-decoration: none; }
+  a:hover, a:focus {
+    text-decoration: underline; }
+
+em {
+  text-emphasis-style: circle;
+  text-emphasis-position: under; }
+
 code {
   font-family: Monaco, Courier, monospace;
-  padding: 0.25em 0.5em;
-  color: #bf616a;
-  background-color: #f9f9f9;
+  font-size: 0.85rem;
+  color: #555;
+  background-color: #f5f5f5;
+  border: 1px solid #eef;
   border-radius: 3px;
-  font-size: 0.9rem;
-}
+  padding: 0.2em 0.5em; }
+
 pre {
   display: block;
   margin-top: 0;
   margin-bottom: 1rem;
   padding: 1rem;
+  font-size: 0.8rem;
   line-height: 1.4;
   white-space: pre;
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f9f9f9;
-}
+  background-color: #f9f9f9; }
+
 pre code {
   font-family: Menlo, Monaco, Courier, monospace;
+  font-size: 0.8rem;
   padding: 0;
-  font-size: 1rem;
-  color: rgba(0,0,0,0.7);
+  color: inherit;
   background-color: transparent;
-}
+  border: none; }
+
 blockquote {
   padding: 0.5rem 1rem;
   margin: 0.8rem 0 0.8rem -1.5rem;
   color: #7a7a7a;
-  border-left: 0.3rem solid #e5e5e5;
-}
-blockquote p:last-child {
-  margin-bottom: 0;
-}
-@media (min-width: 30rem) {
-  blockquote {
-    padding-right: 5rem;
-    padding-left: 1.25rem;
-  }
-}
-img {
+  border-left: 0.3rem solid #e5e5e5; }
+  blockquote p:last-child {
+    margin-bottom: 0; }
+
+hr {
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
   display: block;
-  margin: 0 0 1rem;
+  width: 150px;
+  margin: 1.5rem 0; }
+
+button,
+.btn {
+  background-image: none;
+  border: 1px solid #ccc;
   border-radius: 5px;
-  max-width: 100%;
-}
-/* Tables */
-table {
-  margin-bottom: 1rem;
-  width: 100%;
-  border: 1px solid #e5e5e5;
-  border-collapse: collapse;
-}
-td,
-th {
-  padding: 0.25rem 0.5rem;
-  border: 1px solid #e5e5e5;
-}
-tbody tr:nth-child(odd) td,
-tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
-}
-.container {
-  *zoom: 1;
-  width: auto;
-  max-width: 700px;
-  float: none;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0;
-  padding-right: 0;
-}
-.container:before,
-.container:after {
-  content: '';
-  display: table;
-}
-.container:after {
-  clear: both;
-}
+  color: #ccc;
+  cursor: pointer;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 85%;
+  line-height: normal;
+  padding: 0.5rem 0.75rem;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  -webkit-transition: all 0.3s;
+          transition: all 0.3s; }
+  button::-moz-focus-inner,
+  .btn::-moz-focus-inner {
+    padding: 0;
+    border: 0; }
+  button:hover, button:focus,
+  .btn:hover,
+  .btn:focus {
+    color: #7fdbff;
+    border: 1px solid #7fdbff;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s;
+    text-decoration: none; }
+  button:active,
+  .btn:active {
+    color: #0074d9;
+    border: 1px solid #0074d9;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s; }
+
 .header {
   position: relative;
-  margin: 3rem auto;
-}
+  margin: 3rem auto; }
+
 .site-title {
-  font-size: 1.5rem;
-}
-.site-title a {
-  color: #333;
-}
+  font-size: 1.5rem; }
+  .site-title a {
+    color: #333; }
+
 .nav {
   position: absolute;
   top: 0;
   left: -70px;
-  text-align: right;
-}
+  text-align: right; }
+
 .nav-btn {
   display: inline-block;
-  line-height: 16px;
-}
-.nav-btn.is-on .ci-burger {
-  background: transparent;
-}
-.nav-btn.is-on .ci-burger::before {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-  top: 0;
-}
-.nav-btn.is-on .ci-burger::after {
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  bottom: 0;
-}
-.nav-btn.is-on + .nav-list {
-  opacity: 1;
-}
+  line-height: 16px; }
+  .nav-btn.is-on .ci-burger {
+    background: transparent; }
+  .nav-btn.is-on .ci-burger::before {
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 0; }
+  .nav-btn.is-on .ci-burger::after {
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 0; }
+  .nav-btn.is-on + .nav-list {
+    opacity: 1; }
+
 .nav-list {
   list-style: none;
   font-size: 0.8rem;
@@ -200,25 +210,21 @@ tbody tr:nth-child(odd) th {
   padding: 0;
   opacity: 0;
   -webkit-transition: all 0.2s;
-          transition: all 0.2s;
-}
+          transition: all 0.2s; }
+
 .ci {
-  box-sizing: border-box;
   display: inline-block;
   font-size: inherit;
   font-style: normal;
   font-weight: normal;
   line-height: 1;
   position: relative;
-  vertical-align: top;
-}
-.ci::before,
-.ci::after {
-  content: '';
-  display: block;
-  position: absolute;
-  box-sizing: inherit;
-}
+  vertical-align: top; }
+  .ci:before, .ci:after {
+    content: "";
+    display: block;
+    position: absolute; }
+
 .ci-burger {
   width: 16px;
   height: 3px;
@@ -226,31 +232,61 @@ tbody tr:nth-child(odd) th {
   left: 0;
   background: #333;
   -webkit-transition: all 0.3s;
-          transition: all 0.3s;
-}
-.ci-burger::after,
-.ci-burger::before {
-  width: 100%;
-  height: 3px;
-  background: #333;
-  left: 0;
-  -webkit-transition: all 0.3s;
-          transition: all 0.3s;
-}
-.ci-burger::before {
-  top: -6px;
-}
-.ci-burger::after {
-  bottom: -6px;
-}
-.content {
-  margin-bottom: 7rem;
-}
+          transition: all 0.3s; }
+  .ci-burger:before, .ci-burger:after {
+    width: 100%;
+    height: 3px;
+    background: #333;
+    left: 0;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s; }
+  .ci-burger:before {
+    top: -6px; }
+  .ci-burger:after {
+    bottom: -6px; }
+
+.container {
+  *zoom: 1;
+  width: auto;
+  max-width: 42em;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0; }
+  .container:before, .container:after {
+    content: '';
+    display: table; }
+  .container:after {
+    clear: both; }
+
+.pagination {
+  position: relative;
+  margin-top: 5em; }
+  .pagination:before, .pagination:after {
+    content: '';
+    display: table; }
+  .pagination:after {
+    clear: both; }
+  .pagination .previous {
+    float: left; }
+  .pagination .next {
+    float: right; }
+
+.footer {
+  color: #95a5a6;
+  font-size: 14px;
+  text-align: center;
+  margin: 2rem 0 1rem; }
+  .footer a {
+    color: #333; }
+
 .post {
   position: relative;
-  margin-bottom: 2rem;
-}
-.post-title::after {
+  margin-bottom: 2rem; }
+
+.post-title:after {
   content: '';
   display: block;
   border-top: 1px solid #ccc;
@@ -258,65 +294,47 @@ tbody tr:nth-child(odd) th {
   position: absolute;
   top: 30px;
   left: -30px;
-  z-index: -1;
-}
+  z-index: -1; }
+
 .post-title a {
   color: #333;
   background: #fff;
   line-height: 60px;
-  background: #fff;
   position: relative;
   padding: 0 14px;
   margin-left: -14px;
   -webkit-transition: all 0.3s;
-          transition: all 0.3s;
-}
-.post-title a::after,
-.post-title a::before {
-  content: '';
-  position: absolute;
-  border: 3px solid transparent;
-  top: 13px;
-  -webkit-transition: all 0.3s;
-          transition: all 0.3s;
-}
-.post-title a::before {
-  left: -23px;
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-.post-title a::after {
-  -webkit-transform: rotate(225deg);
-      -ms-transform: rotate(225deg);
-          transform: rotate(225deg);
-  right: -23px;
-}
-.post-title a:hover::before {
-  border-top-color: #ccc;
-  border-right-color: #ccc;
-  left: -3px;
-}
-.post-title a:hover::after {
-  border-top-color: #ccc;
-  border-right-color: #ccc;
-  right: -3px;
-}
+          transition: all 0.3s; }
+  .post-title a:after, .post-title a:before {
+    content: '';
+    position: absolute;
+    border: 3px solid transparent;
+    top: 13px;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s; }
+  .post-title a:before {
+    left: -23px;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .post-title a:after {
+    -webkit-transform: rotate(225deg);
+        -ms-transform: rotate(225deg);
+            transform: rotate(225deg);
+    right: -23px; }
+  .post-title a:hover:before, .post-title a:hover:after {
+    border-top-color: #ccc;
+    border-right-color: #ccc; }
+  .post-title a:hover:before {
+    left: -3px; }
+  .post-title a:hover:after {
+    right: -3px; }
+
 .post-date {
   color: #ccc;
   font-size: 14px;
   position: absolute;
-  top: 45px;
-}
+  top: 45px; }
+
 .post-content {
-  margin: 2rem auto;
-}
-footer {
-  color: #ccc;
-  font-size: 14px;
-  text-align: center;
-  margin: 2rem auto 1rem;
-}
-footer a {
-  color: #666;
-}
+  margin: 2rem 0; }
