--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,7 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/slim.css">
+<link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/highlight.min.css">
 <link href='http://fonts.useso.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 <!-- Icons -->
