added tags, summary or content to home page
* Added tags to homepage list view
* Added Summary or content switch to homepage view
* Added small separator for menu between pages and external links
* Changed from useso.com to google api as according to useso.com
instructions on there homepage as source for fonts — also loads a lot
faster
* updated README to represent changes and added functionality

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,9 @@
     <ul class="nav-list">
       {{ range .Site.Menus.main }}
       <li><a href="{{ .Url }}">{{ .Name }}</a></li>
-      {{end}} {{ with .Site.Params.GithubID }}
+      {{end}} 
+	  <li class="spacer">&ac;</li>
+{{ with .Site.Params.GithubID }}
       <li><a href="https://github.com/{{.}}">Github</a></li>{{ end }} {{ with .Site.Params.TwitterID }}
       <li><a href="https://twitter.com/{{.}}">Twitter</a></li>{{ end }} {{ with .Site.Params.LinkedInID }}
       <li><a href="http://linkedin.com/in/{{.}}">LinkedIn</a></li>{{ end }}
