Added taxonomy page
* added a list lay-out under _default, so that taxonomy pages are shown
as well
* updated css code to properly showing and aligning tags:
  * removed absolute positioning
  * replaced with display: block;

--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -337,8 +337,9 @@ button,
 .post-date {
   color: #ccc;
   font-size: 14px;
-  position: absolute;
-  top: 45px; }
+  margin-top: -25px;
+  display:block;
+  position: relative; }
 
 .post-content {
   margin: 2rem 0; }
@@ -347,11 +348,13 @@ button,
 
 .post-tags {
   color: #ccc;
+  display: block;
   font-size: 14px;
-  position: absolute;
-  right: 25px;
-  top: 45px; 
+  position: relative;
+  margin-top: -25px;
+  margin-left: 125px;
   text-align: right;
+  max-width: 525px;
 }
 
 .post-tags a {
