--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -40,8 +40,8 @@ tbody tr:nth-child(odd) th {
   background-color: #f9f9f9; }
 
 body {
-  color: #333;
-  font-family: Merriweather, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Serif;
+  color: #555;
+  font-family: Verdana, 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Serif;
   font-size: 100%;
   line-height: 1.85;
   letter-spacing: 0.01rem; }
