updated variables + fixed small bug
* updated .BaseUrl to .BaseURL as the latter will be deprecated by Hugo
in 0.15
* .Url to .URL as the latter will be deprecated by Hugo in 0.15
* fixed a small bug that prevented the menu from loading on the
frontpage. (added slash to the javascript path, because it was missing)

--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,5 +1,5 @@
 <div class="pagination">
   {{ if .Paginator.HasPrev }}
-  <a class="btn previous" href="{{ .Paginator.Prev.Url }}">Newer</a> {{ end }} {{ if .Paginator.HasNext }}
-  <a class="btn next" href="{{ .Paginator.Next.Url }}">Older</a> {{ end }}
+  <a class="btn previous" href="{{ .Paginator.Prev.URL }}">Newer</a> {{ end }} {{ if .Paginator.HasNext }}
+  <a class="btn next" href="{{ .Paginator.Next.URL }}">Older</a> {{ end }}
 </div>
