--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -25,8 +25,8 @@
     </div>
     {{ partial "footer.html" . }}
   </div>
-  <script src="{{ .Site.BaseUrl }}/js/slim.js"></script>
-  <script src="{{ .Site.BaseUrl }}/js/highlight.min.js"></script>
+  <script src="{{ .Site.BaseURL }}/js/slim.js"></script>
+  <script src="{{ .Site.BaseURL }}/js/highlight.min.js"></script>
   <script>
     hljs.initHighlightingOnLoad();
   </script>
