Fix deprecated Hugo-vars and functions
That will stop working in Hugo 0.15.

See https://github.com/spf13/hugoThemesSite/issues/6

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
     </div>
     {{ partial "footer.html" . }}
   </div>
-  <script src="{{ .Site.BaseUrl }}js/slim.js"></script>
+  <script src="{{ .Site.BaseURL }}js/slim.js"></script>
   {{ with .Site.Params.AnalyticsID }}{{ partial "analytics.html" . }}{{ end }}
 
 </body>
