--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,7 @@
 <!-- CSS -->
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/slim.css">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/highlight.min.css">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600&subset=latin,latin-ext' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Merriweather:400,700|Montserrat:400' rel='stylesheet' type='text/css'>
 <!-- Icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
 <link rel="shortcut icon" href="/favicon.ico">
