--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -41,7 +41,7 @@ tbody tr:nth-child(odd) th {
 
 body {
   color: #555;
-  font-family: Verdana, 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Serif;
+  font-family: 'Merriweather', 'Helvetica Neue', Helvetica, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', Arial, Serif;
   font-size: 100%;
   line-height: 1.85;
   letter-spacing: 0.01rem; }
@@ -52,9 +52,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1.25;
-  margin-bottom: 0.75rem; }
+  margin-bottom: 0.75rem;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
 h1 {
   font-size: 1.8rem; }
@@ -111,7 +112,7 @@ pre {
 
 pre code {
   font-family: Menlo, Monaco, Courier, monospace;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   padding: 0;
   color: inherit;
   background-color: transparent;
