--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -183,7 +183,8 @@ button,
 .nav {
   position: absolute;
   top: 0;
-  left: -70px;
+  left: -15px;
+  transform: translateX(-100%);
   text-align: right; }
 
 .nav-btn {
