--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -23,6 +23,22 @@
         </div>
       </div>
     </div>
+    {{ if .Params.comments }}
+    <div id="disqus_thread"></div>
+    <script>
+      var disqus_config = function () {
+        this.page.url = {{ .Permalink }};
+        // this.page.identifier = PAGE_IDENTIFIER;
+      };
+      (function() {
+        var d = document, s = d.createElement('script');
+        s.src = '//{{ .Site.Params.DisqusShortname }}.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+    {{ end }}
     {{ partial "footer.html" . }}
   </div>
   <script src="{{ .Site.BaseURL }}/js/slim.js"></script>
