--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,8 +3,8 @@
 <title> {{ .Title }} &middot; {{ .Site.Title }} </title>
 
 <!-- CSS -->
-<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/slim.css">
-<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/highlight.min.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/slim.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.min.css">
 <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro' rel='stylesheet' type='text/css'>
 <!-- Icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
