--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -41,8 +41,8 @@
     {{ end }}
     {{ partial "footer.html" . }}
   </div>
-  <script src="{{ .Site.BaseURL }}/js/slim.js"></script>
-  <script src="{{ .Site.BaseURL }}/js/highlight.min.js"></script>
+  <script src="{{ .Site.BaseURL }}js/slim.js"></script>
+  <script src="{{ .Site.BaseURL }}js/highlight.min.js"></script>
   <script>
     hljs.initHighlightingOnLoad();
   </script>
