--- a/themes/slim/static/css/styles.css
+++ b/themes/slim/static/css/styles.css
@@ -426,14 +426,15 @@ template {
   display: none;
 }
 
-.navigation {
+header.navigation {
   max-width: 640px;
-  margin: 0 auto;
+  margin: 144px auto;
+  margin: 9rem auto;
 }
 
 .site-title {
-  font-size: 35.2px;
-  font-size: 2.2rem;
+  font-size: 32px;
+  font-size: 2rem;
   font-weight: 700
 }
 
@@ -441,6 +442,10 @@ template {
   .site-title a:hover {
   color: #333333;
   text-decoration: none;
+}
+
+.site-subtitle {
+  color: #bcc1c1;
 }
 
 .nav {
@@ -466,6 +471,7 @@ template {
 
 .nav-item:after {
   content: "/";
+  color: #333333;
 }
 
 .nav-item:last-child {
@@ -484,7 +490,6 @@ template {
 
 .nav-link {
   color: #333333;
-  font-weight: 500;
   display: inline-block;
   position: relative;
 }
@@ -580,7 +585,7 @@ figcaption {
 .post-meta a {
   font-size: 16px;
   font-size: 1rem;
-  color: rgb(153, 153, 153);
+  color: #bcc1c1;
 }
 
 .post-tags {
