--- a/themes/slim/src/_navigation.css
+++ b/themes/slim/src/_navigation.css
@@ -1,10 +1,10 @@
-.navigation {
+header.navigation {
   max-width: var(--contentWidth);
-  margin: 0 auto;
+  margin: 9rem auto;
 }
 
 .site-title {
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-weight: 700;
 
   & a,
@@ -12,6 +12,10 @@
     color: var(--mainColor);
     text-decoration: none;
   }
+}
+
+.site-subtitle {
+  color: var(--greyColor);
 }
 
 .nav {
@@ -33,6 +37,7 @@
 
   &:after {
     content: "/";
+    color: var(--mainColor);
   }
 }
 
@@ -51,7 +56,6 @@
 
 .nav-link {
   color: var(--mainColor);
-  font-weight: 500;
   display: inline-block;
   position: relative;
 }
