--- a/themes/slim/layouts/index.html
+++ b/themes/slim/layouts/index.html
@@ -16,9 +16,11 @@
         {{- end }}
         </div>
     </header>
-    <section class="post-content">
+    {{- if .Params.Description }}
+    <section class="post-summary">
       <p>{{ .Description }}</p>
     </section>
+    {{- end }}
   </article>
   {{- end}}
   {{- end}}
