--- a/themes/slim/layouts/partials/footer.html
+++ b/themes/slim/layouts/partials/footer.html
@@ -1,25 +1,27 @@
-<div class="footer">
+<footer class="footer">
+  <section class="social">  
   {{ with .Site.Params.GithubID }}
-      <a href="https://github.com/{{.}}" class="link social-link">
+      <a href="https://github.com/{{.}}" class="btn-icon">
         <svg class="amoicon"><use xlink:href="#github"></use></svg>
       </a>
   {{ end }}
   {{ with .Site.Params.TwitterID }}
-      <a href="https://twitter.com/{{.}}" class="link social-link">
+      <a href="https://twitter.com/{{.}}" class="btn-icon">
         <svg class="amoicon"><use xlink:href="#twitter"></use></svg>
       </a>
   {{ end }}
   {{ with .Site.Params.LinkedInID }}
-      <a href="https://linkedin.com/{{.}}" class="link social-link">
+      <a href="https://linkedin.com/{{.}}" class="btn-icon">
         <svg class="amoicon"><use xlink:href="#linkedin"></use></svg>
       </a>
   {{ end }}
+  </section>
   {{ with .Site.Copyright -}}
     <p>{{ . | safeHTML }} </p>
     {{- else -}}
     <p>Powered by <a href="http://gohugo.io">Hugo</a>. This theme—Slim—is open sourced on <a href="https://github.com/zhe/hugo-theme-slim">Github</a>.</p>
   {{- end }}
-</div>
+</footer>
 <script src="/bundle.js"></script>
 {{ if .Site.GoogleAnalytics }}{{ template "_internal/google_analytics_async.html" . }}{{ end }}
 </body>
