--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  {{ if isset .Site.Params "FooterMsg" }}
+  {{ if .Site.Params.FooterMsg }}
   <p>{{ .Site.Params.FooterMsg | safeHTML }}</p>
   {{else}}
   <p>Powered by <a href="http://gohugo.io">Hugo</a>. This theme—Slim—is open sourced on <a href="https://github.com/zhe/hugo-theme-slim">Github</a>.</p>
