Made simple changes to css addedMathjax and googlr font support.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,7 @@
 <div class="header">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
   <h1 class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
   <p class="site-tagline">{{ .Site.Params.Subtitle }}</p>
   <div class="nav">
